# AW_Academy_cpp

week1/: assignment2-1.cpp  assignment2-2.cpp  assignment2-3.cpp  assignment2-4.cpp  assignment2-5.cpp
week1/assignment3-1/: ex3-1.cpp  ex3-10.cpp  ex3-2.cpp  ex3-3.cpp  ex3-4.cpp  ex3-5.cpp  ex3-6.cpp  ex3-7.cpp  ex3-8.cpp  ex3-9.cpp
week1/assignment3-2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
week1/assignment4-1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
week10/assignment1_1/: README.md  main.cpp
week10/assignment1_2/: README.md  main.cpp
week10/assignment3_1/: README.md  main.cpp
week10/assignment4_1/: README.md  main.cpp
week10/group_assignment/: CMakeLists.txt  main.cpp
week2/: assignment1-3.cpp
week2/assignment1-1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp
week2/assignment1-2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
week2/assignment2-1/: CMakeLists.txt  main.cpp
week2/assignment2-2/: CMakeLists.txt  main.cpp
week2/assignment3-1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  (+2 more)
week3/assignment1_2/: CMakeLists.txt  main.cpp
week3/assignment1_2/includes/: weather.hpp
week3/assignment1_2/src/: weather.cpp
week3/assignment1_2/tests/: CMakeLists.txt  weather_tests.cpp
week6/assignment4_2/: CMakeLists.txt  creatures.txt  main.cpp
week6/assignment4_2/includes/: ex.hpp
week6/assignment4_2/src/: CMakeLists.txt  ex.cpp
week8/assignment3_1/: CMakeLists.txt  README.md  main.cpp
week8/assignment3_1/includes/: heap_array.hpp
week8/assignment3_1/tests/: CMakeLists.txt  heap_array_tests.cpp
(+161 files in other folders)
